--- a/css/renderingPost.css
+++ b/css/renderingPost.css
@@ -14,6 +14,29 @@ article:hover {
     transform: translateY(-5px); /* Piccolo movimento quando passi sopra col mouse */
 }
 
+article p{
+    margin: 0;
+}
+
+.contenitore_SD{
+    display: flex;
+    justify-content: space-around;
+}
+.contenitore_SD div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.titolo_p{
+    margin: 0;
+    color: #666;
+}
+
+.contenitore_descrizione{
+    margin-top: 1rem;
+    border-top: 1px solid #ddd;
+}
+
 /* RENDERING EVENTO */
 
 /* Enfatizziamo il risultato come un tabellone */
@@ -63,9 +86,13 @@ article:hover {
 
 .contenitore_foto_ricordo {
     margin-top: 1rem;
+    border-top: 1px solid #ddd;
     width: 100%; /* La foto prende tutto lo spazio disponibile nel contenitore */
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+
 }
 
 .foto_ricordo {
@@ -198,6 +225,7 @@ p{
 .contenitore_dettagli_utente{
     display: flex;
     flex-direction: row;
+    margin-bottom: 1rem;
 }
 
 .immagine_utente{
@@ -209,4 +237,9 @@ p{
 
 p{
     font-size: large;
+}
+
+.contenitore_descrizione h3,
+.contenitore_foto_ricordo h3{
+    margin-top: 1rem;
 }
