--- a/css/login.css
+++ b/css/login.css
@@ -1,9 +1,11 @@
 
 #form-container{
+    position: relative;
     background-color: var(--bg-overlay);
     border-radius: 2rem;
     width: 40%;
     height: fit-content;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,12 +13,15 @@
 #logo_sito{
     position: absolute;
     width: 10rem;
+    top: -5rem;    
+    left: 50%;
+    transform: translateX(-50%);
     background-color: white;
     border: 3px solid var(--pitch-medium);
-    border-radius: 20%;
+    z-index: 10;
 }
 form{
-    padding-top: 5%;
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
