--- a/css/renderingPost.css
+++ b/css/renderingPost.css
@@ -141,11 +141,15 @@ article p{
 .bottone_elimina{
     background-color: red;
     border-color: red;
+    border-radius: 0.5rem;
+    border: none;
 }
 
 .bottone_elimina:hover{
     background-color: #cc0000;;
     border-color: #cc0000;
+    border-radius: 0.5rem;
+    border: none;
 }
 .bottone_elimina img{
     height: 32px;
