--- a/css/recensione.css
+++ b/css/recensione.css
@@ -19,10 +19,14 @@ h2, h3 {
     font-size: large;
 }
 .campo_form_stadio{
-    padding: 5%;
-    margin-bottom: 2rem;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    font-size: 1rem;
+    box-sizing: border-box;
     text-align: center;
-    border-radius: 2rem;
+    margin-bottom: 1rem;
 }
 #contenitore_recensione{
     padding: 2rem;
